--- a/src/client/assets/html/index.html
+++ b/src/client/assets/html/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>App</title>
+  <link href="https://fonts.googleapis.com/css?family=Cabin|Julius+Sans+One" rel="stylesheet">
 </head>
 <body>
   <div id="app"></div>
