--- a/src/client/assets/html/index.html
+++ b/src/client/assets/html/index.html
@@ -3,9 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>App</title>
-  <link href="https://fonts.googleapis.com/css?family=Cabin|Julius+Sans+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cabin|Julius+Sans+One" rel="stylesheet" />
 </head>
 <body>
   <div id="app"></div>
+<script src='jquery.min.js' type='text/javascript'></script>
+<script src='jquery.ui.widget.js' type='text/javascript'></script>
+<script src='jquery.iframe-transport.js' type='text/javascript'></script>
+<script src='jquery.fileupload.js' type='text/javascript'></script>
+<script src='jquery.cloudinary.js' type='text/javascript'></script>
 </body>
+
 </html>
